<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:src="@drawable/ic_menu_black_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/margin_medium"
            android:layout_toRightOf="@+id/ivMenu"
            android:src="@drawable/hotairballongreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/tv_lbl_discount_tour"
            android:textSize="@dimen/text_heading_1x"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvFindBestTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivMenu"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/tv_lbl_find_the_best_tour"
        android:textSize="@dimen/text_big"
        android:textStyle="bold" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFindBestTour"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/tv_lbl_country"
                android:textSize="@dimen/text_heading_1x" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCountries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCountry"
                android:layout_margin="@dimen/margin_medium" />

            <TextView
                android:id="@+id/tvPopularTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvCountries"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/tv_lbl_popular_tour"
                android:textSize="@dimen/text_heading_1x" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPopularTour"
                android:layout_margin="@dimen/margin_medium" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>