<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_medium"
    app:cardCornerRadius="@dimen/margin_large">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <ImageView
            android:id="@+id/ivPopularTour"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/bagan"
            android:scaleType="fitXY"
            />
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv"
            android:text="@string/tv_lbl_american"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_medium"
            android:layout_toRightOf="@+id/ivPopularTour"
            />
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_lbl_10_nights_for_two_all_inclusive"
            android:layout_toRightOf="@+id/ivPopularTour"
            android:layout_margin="@dimen/margin_medium"
            />
        <TextView
            android:id="@+id/tvPrice"
            android:layout_below="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_lbl_245"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_medium"
            android:layout_toRightOf="@+id/ivPopularTour"
            />
        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:text="4.3"
            android:textSize="@dimen/text_regular"
            android:textAlignment="center"
            android:background="@drawable/bg_round_green"
            android:padding="@dimen/margin_medium"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_medium"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawableBottom="@drawable/ic_star_black_24dp"
            android:drawableTint="@android:color/white"
            />

    </RelativeLayout>


</androidx.cardview.widget.CardView>