<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
            app:scrimAnimationDuration="1000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bagan" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_heading_2x"
                    android:textColor="@android:color/white"
                    android:layout_above="@+id/tvPlace"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="Sea Flower Resort"
                    />
                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Koh Chaung Tai,Thailand"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:textSize="@dimen/text_regular_3x"
                    android:textColor="@android:color/white"
                    android:layout_above="@+id/rb"
                    android:layout_margin="@dimen/margin_medium"
                    />
                <RatingBar
                    android:id="@+id/rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressTint="@android:color/white"
                    android:progressBackgroundTint="@android:color/white"
                    android:rating="3"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    style="?android:attr/ratingBarStyleIndicator"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_alignTop="@+id/rb"
                    android:layout_toRightOf="@+id/rb"
                    android:textSize="@dimen/text_regular_3x"
                    android:textColor="@android:color/white"
                    />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:titleTextColor="#fff">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/abc_vector_test"
                    android:layout_margin="@dimen/margin_medium"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    android:layout_toLeftOf="@+id/ivShare"
                    android:layout_margin="@dimen/margin_medium"
                    />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_share_black_24dp"
                    android:layout_margin="@dimen/margin_medium"
                    />
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_round_detail_fragment"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivWifi"
                android:layout_width="@dimen/circle_image_height"
                android:layout_height="@dimen/circle_image_width"
                android:src="@drawable/ic_wifi_black_24dp"
                android:background="@drawable/bg_circle"
                android:elevation="8dp"
                android:scaleType="centerInside"
                android:layout_marginLeft="@dimen/margin_medium"
                />
            <ImageView
                android:id="@+id/ivBeach"
                android:layout_toRightOf="@+id/ivWifi"
                android:layout_width="@dimen/circle_image_height"
                android:layout_height="@dimen/circle_image_width"
                android:src="@drawable/ic_beach_access_black_24dp"
                android:background="@drawable/bg_circle"
                android:elevation="8dp"
                android:scaleType="centerInside"
                android:layout_marginLeft="@dimen/margin_xxlarge"
                />
            <ImageView
                android:id="@+id/ivCoastline"
                android:layout_toLeftOf="@+id/ivRestaurant"
                android:layout_width="@dimen/circle_image_height"
                android:layout_height="@dimen/circle_image_width"
                android:src="@drawable/beachtree"
                android:background="@drawable/bg_circle"
                android:elevation="8dp"
                android:scaleType="centerInside"
                android:layout_marginRight="@dimen/margin_xxlarge"
                />
            <ImageView
                android:id="@+id/ivRestaurant"
                android:layout_width="@dimen/circle_image_height"
                android:layout_height="@dimen/circle_image_width"
                android:src="@drawable/ic_restaurant_black_24dp"
                android:background="@drawable/bg_circle"
                android:elevation="8dp"
                android:scaleType="centerInside"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_alignParentEnd="true"
                />
            <TextView
                android:id="@+id/tvWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_lbl_free_wifi"
                android:layout_below="@+id/ivWifi"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_alignLeft="@+id/ivWifi"
                android:layout_marginLeft="@dimen/margin_medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_lbl_sand_beach"
                android:layout_below="@+id/ivBeach"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_alignLeft="@+id/ivBeach"
                android:layout_marginLeft="@dimen/margin_medium"
                />
            <TextView
                android:id="@+id/tvRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_lbl_bar_and_restaurant"
                android:layout_below="@+id/ivRestaurant"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_alignLeft="@+id/ivRestaurant"
                android:layout_marginLeft="@dimen/margin_medium"
                />
            <TextView
                android:id="@+id/tvFirstCoastline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_lbl_first_ncoastline"
                android:layout_below="@+id/ivBeach"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_alignLeft="@+id/ivCoastline"
                android:layout_marginLeft="@dimen/margin_medium"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvScoreAndReview"
                android:layout_margin="@dimen/margin_medium"
                android:layout_below="@+id/tvFirstCoastline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvDescription"
                android:layout_below="@+id/rvScoreAndReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_regular_2x"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/app_name"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPhoto"
                android:layout_below="@+id/tvDescription"
                android:layout_margin="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>